--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -28,11 +28,29 @@ section#telefone{
     height: 627px;
     width: 311px;
     background: url('../imagens/frame-iphone.png') no-repeat;
-}
+} 
 iframe#tela{
     position: relative;
     top: 80px;
     left: 22px;
     width: 266px;
     height: 471px;
+}
+
+section#redesociais{
+    text-align: right;
+}
+
+section#redesociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%; 
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.397);
+    box-sizing: border-box;  
+}
+section#redesociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.61);
+    transform: translate(-5px,-5px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.61);
+    transition: transform 0.6s, border 1s;
 }
